--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/shorten-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/shorten-db
 spring.datasource.username=my_user
 spring.datasource.password=my_password
 spring.datasource.initialization-mode=always
